--- a/index.html
+++ b/index.html
@@ -1,42 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/animations.css" />
-    <title>Fancy Robot Face</title>
-  </head>
-  <body>
-    <div class="robot-container">
-      <div class="robot-face-shape">
-        <div class="robot-eye-left"></div>
-        <div class="robot-eye-right"></div>
-        <div class="robot-nose"></div>
-        <div class="robot-teeth">
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-        </div>
-      </div>
-      <div class="robot-ear-left"></div>
-      <div class="robot-ear-right"></div>
-      <div class="robot-hair-style">
-        <div class="robot-hair-one"></div>
-        <div class="robot-hair-two"></div>
-        <div class="robot-hair-three"></div>
-        <div class="robot-hair-two"></div>
-        <div class="robot-hair-one"></div>
-      </div>
-    </div>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/fancy-robot.css" /> 
+        
+    <title>CSS Positioning</title>
+</head>
+
+<body>
+     <div class="container">
+        <div class="head "> </div>
+        <div class="leye "> </div>
+        <div class="ldot "> </div>
+        <div class="reye "> </div>
+        <div class="rdot "> </div>
+        <div class="diamond"></div>
+        <div class="mouth"> </div>
+        <div class="t1"> </div>
+        <div class="t1a"> </div>
+        <div class="t2"> </div>
+        <div class="t3"> </div>
+        <div class="t4"> </div>
+        <div class="t5"> </div>
+        <div class="t6"> </div>
+        <div class="t7"> </div>
+        <div class="t8"> </div>
+        <div class="t9"> </div>
+        <div class="t10"> </div>
+        <div class="t11"> </div>
+        <div class="t11a"> </div>
+        <div class="linear"> </div>
+        <div class="loutear"> </div>
+        <div class="rinear"> </div>
+        <div class="routear"> </div>
+        <div class="leyebrow"> </div>
+        <div class="reyebrow"> </div>
+        <div class="leftant"> </div>
+        <div class="rightant"> </div>
+        <div class="lball"> </div>
+        <div class="rball"> </div>
+        <div class="hair1"> </div>
+        <div class="hair2"> </div>
+        <div class="hair3"> </div>
+        <div class="hair4"> </div>
+        <div class="hair5"> </div>
+        <div class="hair6"> </div>
+        <div class="hair7"> </div>
+        <div class="hair8"> </div>
+        <div class="hair9"> </div>
+
+     </div>   
+
+</body>
 </html>
